--- a/prueba.html
+++ b/prueba.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Traket</title>
 </head>
 <body>
-    Prueba de commit
+    <div class="container">
+        <p>Bievenido a Traket</p>
+    </div>
 </body>
 </html>
