--- a/prueba.html
+++ b/prueba.html
@@ -10,5 +10,10 @@
     <div class="container">
         <p>Bievenido a Traket</p>
     </div>
+
+    <div>
+
+        Por qué a Julio no le funciona cara triste.
+    </div>
 </body>
 </html>
